syntax = "proto3";

package protos.v1;

import "google/api/annotations.proto";
option go_package = "github.com/oranjParker/Rarefactor/generated/protos/v1";

service CrawlerService {
  rpc Crawl (CrawlRequest) returns (CrawlResponse) {
    option (google.api.http) = {
      post: "/v1/crawl"
      body: "*"
    };
  }

  rpc CancelJob (CancelJobRequest) returns (CancelJobResponse) {
    option (google.api.http) = {
      post: "/v1/crawl/{job_id}/cancel"
    };
  }
}

message CrawlRequest {
  string seed_url = 1;
  int32 max_pages = 2;
  int32 max_depth = 3;
  string crawl_mode = 4;
}

message CrawlResponse {
  string job_id = 1;
  string status = 2;
}

message CancelJobRequest {
  string job_id = 1;
}

message CancelJobResponse {
  string status = 1;
}